removed radar chart, touched up dark2 theme

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php echo '<?xml version="1.0" encoding="UTF-8" standalone="no"?>' ?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <html class="noSelect">
 
 <head>
@@ -57,7 +57,7 @@
 				<a onclick='setChart("doughnut")'>Doughnut</a>
 				<a onclick='setChart("horizontalBar")'>Bar</a>
 				<a onclick='setChart("polarArea")'>Polar</a>
-				<a onclick='setChart("radar")'>Radar</a>
+				<!--	<a onclick='setChart("radar")'>Radar</a> -->
 
 				<a onclick='setChart("none")'>None</a>
 			</div>
