made it so chart leans can be toggled

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 
 		<div class="dropdown">
 			<button class="dropdown-button">
+				Counters
+			</button>
+			<div class="dropdown-content">
+				<a onclick='toggleLegendCounter()'>Legend Counter</a>
+				<a onclick='toggleChartLabels()'>Chart Labels</a>
+				<a onclick='toggleChartLeans()'>Chart Leans</a>
+			</div>
+		</div>
+
+		<div class="dropdown">
+			<button class="dropdown-button">
 				Themes
 			</button>
 			<div class="dropdown-content">
@@ -109,14 +120,16 @@
 	</span>
 	<div id="menu-right">
 
+		<!--
 		<div class="dropdown" class="right-justify">
 			<button class="dropdown-button">
 				Misc
 			</button>
 			<div class="dropdown-content">
 				<a onclick='toggleLegendCounter()'>Legend Counter</a>
+				<a onclick='toggleChartLabels()'>Chart Labels</a>
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 </div>
