--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 			</button>
 
 			<div class="dropdown-content">
-				<a onclick='loadMap("../usa.svg", "usa_ec", 16);'>Presidential</a>
+				<a onclick='loadMap("../presidential.svg", "usa_ec", 16);'>Presidential</a>
+				<a onclick='loadMap("../usa_no_districts.svg", "usa_no_districts_ec", 16)'>No Districts</a>
 				<a onclick='loadMap("../lte.svg", "lte_ec", 35);'>LTE Discord</a>
 			</div>
 		</div>
