--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 				<a onclick='setMode("paint")'>Paint</a>
 				<a onclick='setMode("delete")'>Delete</a>
 				<a onclick='setMode("ec")'>EC Edit</a>
+				<a onclick='setMode("candidate")'>Candidate Edit</a>
 			</div>
 		</div>
 
@@ -151,11 +152,21 @@
 </div>
 
 <div id="ecedit" class="popup">
-	<h3 id="ecedit-message">
-	</h3>
+	<h3 id="ecedit-message"></h3>
 	<input id="state-ec" type="number" name="value" min="1" max="9999">
 	<input id="state-id" type="hidden">
 	<button onclick="setEC(this)">set</button>
+</div>
+
+<div id="candidateedit" class="popup">
+	<h3 id="candidateedit-message"></h3>
+	<p> A name change will remove the candidate from the map </p>
+	Name:<input id="candidate-name" type="text" name="name"><br>
+	Solid:<input id="candidate-solid" type="color"><br>
+	Likely:<input id="candidate-likely" type="color"><br>
+	Lean:<input id="candidate-lean" type="color"><br>
+	<input id="candidate-originalName" type="hidden">
+	<button onclick="setCandidate(this)">set</button>
 </div>
 
 </body>
