--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
 			</button>
 
 			<div class="dropdown-content">
-				<a onclick='loadMap("../res/presidential.svg", "usa_ec", 16, "presidential", "open");'>Presidential</a>
-				<a onclick='loadMap("../res/usa_senate.svg", "usa_senate", 16, "senatorial", "2020")'>Senatorial<br>2020</a>
-				<a onclick='loadMap("../res/usa_gubernatorial.svg", "usa_gubernatorial", 16, "gubernatorial", "2020")'>Gubernatorial 2020</a>
-				<a onclick='loadMap("../res/usa_no_districts.svg", "usa_no_districts_ec", 16, "presidential", "open")'>Presidential Take All</a>
-				<a onclick='loadMap("../res/usa_senate.svg", "usa_senate", 16, "senatorial", "open")'>Senatorial<br>Open</a>
-				<a onclick='loadMap("../res/usa_gubernatorial.svg", "usa_gubernatorial", 16, "gubernatorial", "open")'>Gubernatorial<br>Open</a>
-				<a onclick='loadMap("../res/lte.svg", "lte_ec", 35);'>LTE Discord</a>
+				<a onclick='loadMap("../res/presidential.svg", 16, 1, "usa_ec", "presidential", "open");'>Presidential</a>
+				<a onclick='loadMap("../res/usa_senate.svg", 16, 1, "usa_senate", "senatorial", "2020")'>Senatorial<br>2020</a>
+				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "2020")'>Gubernatorial 2020</a>
+				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "2018")'>Gubernatorial 2018</a>
+				<a onclick='loadMap("../res/usa_no_districts.svg", 16, 1, "usa_no_districts_ec", "presidential", "open")'>Presidential Take All</a>
+				<a onclick='loadMap("../res/usa_senate.svg", 16, 1.5, "usa_senate", "senatorial", "open")'>Senatorial<br>Open</a>
+				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "open")'>Gubernatorial<br>Open</a>
+				<a onclick='loadMap("../res/canada_states.svg", 16, 3, "canada_ec", "presidential", "open");'>Canada</a>
+				<a onclick='loadMap("../res/lte.svg", 35, 1, "lte_ec", "presidential", "open");'>LTE Discord</a>
 			</div>
 		</div>
 		
