--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>YAPms (Yet Another Political Map Simulator)</title>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132710089-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-132710089-1');
+	</script>
+
+
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 	<link rel="stylesheet" type="text/css" href="style/menu.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
