fixed governor 2020, added privacy

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "open")'>Gubernatorial<br>Open</a>
 				<a onclick='loadMap("../res/canada_states.svg", 38, 3, "canada_ec", "presidential", "open");'>Canada</a>
 				<a onclick='loadMap("../res/lte.svg", 35, 1, "lte_ec", "presidential", "open");'>LTE Discord</a>
+				<!--<a onclick='loadMap("../res/usa_congressional.svg", 16, 1, "lte_ec", "congressional", "open")'>Congressional Open</a>-->
 			</div>
 		</div>
 		
@@ -153,7 +154,6 @@
 		Mode - Paint
 	</span>
 
-	<!--
 	<div id="menu-right">
 
 		<div class="dropdown" class="right-justify">
@@ -161,12 +161,11 @@
 				Misc
 			</button>
 			<div class="dropdown-content">
-				<a onclick="window.print()">Nothing :)</a>
+				<a href="https://privacypolicies.com/privacy/view/5e9b5eee7febd2d29c0ec896e1ac90ef">Privacy</a>
 			</div>
 		</div>
 
 	</div>
-	-->
 </div>
 
 <div id="legend-div">
