--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 				<a onclick='loadMap("../res/presidential.svg", 16, 1, "usa_ec", "presidential", "open");'>Presidential</a>
 				<a onclick='loadMap("../res/usa_senate.svg", 16, 1, "usa_senate", "senatorial", "2020")'>Senatorial<br>2020</a>
 				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "2020")'>Gubernatorial 2020</a>
-				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "2018")'>Gubernatorial 2018</a>
+				<!--<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "2018")'>Gubernatorial 2018</a>-->
 				<a onclick='loadMap("../res/usa_no_districts.svg", 16, 1, "usa_no_districts_ec", "presidential", "open")'>Presidential Take All</a>
 				<a onclick='loadMap("../res/usa_senate.svg", 16, 1.5, "usa_senate", "senatorial", "open")'>Senatorial<br>Open</a>
+				<a onclick='loadMap("../res/usa_congressional.svg", 16, 1, "congressional", "congressional", "open")'>Congressional Open</a>
 				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "open")'>Gubernatorial<br>Open</a>
 				<a onclick='loadMap("../res/canada_states.svg", 38, 3, "canada_ec", "presidential", "open");'>Canada</a>
 				<a onclick='loadMap("../res/lte.svg", 35, 1, "lte_ec", "presidential", "open");'>LTE Discord</a>
-				<!--<a onclick='loadMap("../res/usa_congressional.svg", 16, 1, "lte_ec", "congressional", "open")'>Congressional Open</a>-->
 			</div>
 		</div>
 		
@@ -89,8 +89,6 @@
 				<a onclick='setChart("doughnut")'>Doughnut</a>
 				<a onclick='setChart("horizontalBar")'>Bar</a>
 				<a onclick='setChart("polarArea")'>Polar</a>
-				<!--	<a onclick='setChart("radar")'>Radar</a> -->
-
 				<a onclick='setChart("none")'>None</a>
 			</div>
 		</div>
@@ -112,7 +110,6 @@
 			</button>
 			<div class="dropdown-content">
 				<a onclick='darkPalette()'>Dark</a>
-				<a onclick='dark2Palette()'>Dark2</a>
 				<a onclick='terminalPalette()'>Terminal</a>
 				<a onclick='lightPalette()'>Light</a>
 				<a onclick='contrastPalette()'>Contrast</a>
