added shortcuts, removed modes from the congressional map, rebuild chart for leans

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 				Modes
 			</button>
 			<div class="dropdown-content">
-				<a onclick='setMode("paint")'>Paint</a>
-				<a onclick='setMode("move")'>Move</a>
-				<a onclick='setMode("delete")'>Delete</a>
-				<a onclick='setMode("ec")'>EC Edit</a>
-				<a onclick='setMode("candidate")'>Candidate Edit</a>
+				<a onclick='setMode("paint")'><u>P</u>aint</a>
+				<a onclick='setMode("move")'><u>M</u>ove</a>
+				<a onclick='setMode("delete")'><u>D</u>elete</a>
+				<a onclick='setMode("ec")'><u>E</u>C Edit</a>
+				<a onclick='setMode("candidate")'><u>C</u>andidate Edit</a>
 			</div>
 		</div>
 
