--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Free political map simulator">
-	<meta name="keywords" content="Maps,Political,Simulator,Election,President,Governor,Senator,Interactive">
+	<meta name="description" content="Presidential, Senatorial, Congressional and Guberntorial political map simulator.">
+	<meta name="keywords" content="Maps,Political,Simulator,Election,President,Governor,Senator,Congress,Interactive">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>YAPms (Yet Another Political Map Simulator)</title>
