--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<!--<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "2018")'>Gubernatorial 2018</a>-->
 				<a onclick='loadMap("../res/usa_no_districts.svg", 16, 1, "usa_no_districts_ec", "presidential", "open")'>Presidential Take All</a>
 				<a onclick='loadMap("../res/usa_senate.svg", 16, 1.5, "usa_senate", "senatorial", "open")'>Senatorial<br>Open</a>
-				<a onclick='loadMap("../res/usa_congressional.svg", 16, 1, "congressional", "congressional", "open")'>Congressional Open</a>
+				<a onclick='loadMap("../res/usa_congressional_2018.svg", 16, 1, "congressional", "congressional", "open")'>Congressional 2018 Open</a>
 				<a onclick='loadMap("../res/usa_gubernatorial.svg", 16, 1, "usa_gubernatorial", "gubernatorial", "open")'>Gubernatorial<br>Open</a>
 				<a onclick='loadMap("../res/canada_states.svg", 38, 3, "canada_ec", "presidential", "open");'>Canada</a>
 				<a onclick='loadMap("../res/lte.svg", 35, 1, "lte_ec", "presidential", "open");'>LTE Discord</a>
