disabled shortcuts, fixed bug with edit candidate

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 	Solid:<input id="candidate-solid" type="color"><br>
 	Likely:<input id="candidate-likely" type="color"><br>
 	Lean:<input id="candidate-lean" type="color"><br>
-	<input id="candidate-or:EiginalName" type="hidden">
+	<input id="candidate-originalName" type="hidden">
 	<button onclick="setCandidate(this)">set</button>
 </div>
 
