--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 <div id="menu-div">
 
 	<div id="menu-left">
-
 		<button class="click-button" onclick="clearMap()">
 			Clear
 		</button>
@@ -158,6 +157,7 @@
 				Misc
 			</button>
 			<div class="dropdown-content">
+				<a onclick="toggleLTELogo()">LTE Logo</a>
 				<a href="https://privacypolicies.com/privacy/view/5e9b5eee7febd2d29c0ec896e1ac90ef">Privacy</a>
 			</div>
 		</div>
@@ -172,6 +172,7 @@
 <div id="application">
 	<div id="chart-div">
 		<canvas id="chart" width="100" height="100"></canvas>
+		<img id="logo" src="./res/lte.png">
 	</div>
 
 	<div id="map-div">
