added a center map button to misc

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 				Misc
 			</button>
 			<div class="dropdown-content">
+				<a onclick="centerMap()">Center Map</a>
 				<a onclick="toggleLTELogo()">LTE Logo</a>
 				<a href="https://privacypolicies.com/privacy/view/5e9b5eee7febd2d29c0ec896e1ac90ef">Privacy</a>
 			</div>
