added a battle chart (beta)

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 				<a onclick='setChart("doughnut")'>Doughnut</a>
 				<a onclick='setChart("horizontalBar")'>Bar</a>
 				<a onclick='setChart("polarArea")'>Polar</a>
+				<a onclick='setChart("battle")'>Battle (beta)</a>
 				<a onclick='setChart("none")'>None</a>
 			</div>
 		</div>
@@ -174,6 +175,16 @@
 
 	<div id="chart-div">
 		<canvas id="chart" width="100" height="100"></canvas>
+
+		<div id="battlechart">
+		<div id="topbar">
+		</div>
+		<div id="tossupbar">
+		</div>
+		<div id="bottombar">
+		</div>
+		</div>
+
 		<img id="logo" src="./res/lte.png">
 	</div>
 
