--- a/app/index.html
+++ b/app/index.html
@@ -162,7 +162,6 @@
 			<div class="dropdown-content">
 				<a onclick="centerMap()">Center Map</a>
 				<a onclick="toggleLTELogo()">LTE Logo</a>
-				<a href="https://privacypolicies.com/privacy/view/5e9b5eee7febd2d29c0ec896e1ac90ef">Privacy</a>
 			</div>
 		</div>
 
@@ -186,7 +185,7 @@
 		</div>
 		</div>
 
-		<img id="logo" src="./res/lte.png">
+		<img id="logo" src="/app/res/lte.png">
 	</div>
 
 	<div id="map-div">
