fixed logo strech in chome

--- a/app/index.html
+++ b/app/index.html
@@ -207,8 +207,9 @@
 				</div>
 			</div>
 		</div>
-
-		<img id="logo" src="/app/res/lte.png">
+		<div id="logo-div">
+			<img id="logo" src="./res/lte.png">
+		</div>
 	</div>
 
 	<div id="map-div">
