fixed bug where clicking chart leans, would put a different chart into the side bar

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.5.0"></script> 
 	<script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.5.0/dist/svg-pan-zoom.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="./src/loadmap.js"></script>
 	<script src="./src/click.js"></script>
 	<script src="./src/data.js"></script>
 	<script src="./src/State.js"></script>
