--- a/app/index.html
+++ b/app/index.html
@@ -210,7 +210,7 @@
 		</div>
 
 		<div id="logo-div">
-			<img id="logo" src="./res/lte.png">
+			<img id="logo" src="./res/lte.jpg">
 		</div>
 	</div>
 
