loads logo after rest of page

--- a/app/index.html
+++ b/app/index.html
@@ -210,7 +210,6 @@
 		</div>
 
 		<div id="logo-div">
-			<img id="logo" src="./res/lte.jpg">
 		</div>
 	</div>
 
@@ -254,5 +253,9 @@
 </body>
 
 <script src="./src/main.js"></script>
+<script>
+	document.getElementById('logo-div').innerHTML =
+	'<img id="logo" src="./res/lte.jpg">';
+</script>
 
 </html>
