--- a/app/index.html
+++ b/app/index.html
@@ -45,9 +45,11 @@
 <div id="menu-div">
 
 	<div id="menu-left">
-		<button class="click-button" onclick="clearMap()">
-			Clear
-		</button>
+		<div>
+			<button class="click-button" onclick="clearMap()">
+				Clear
+			</button>
+		</div>
 
 		<div class="dropdown">
 			<button class="dropdown-button">
@@ -253,6 +255,7 @@
 </body>
 
 <script src="./src/main.js"></script>
+
 <script>
 	document.getElementById('logo-div').innerHTML =
 	'<img id="logo" src="./res/lte.jpg">';
