started adding tilts

--- a/app/html/battlechart.html
+++ b/app/html/battlechart.html
@@ -8,21 +8,25 @@
 	</div>
 	<div id="battlechartright">
 		<div id="topbar">
-			<div id="topbar-solid">
+			<div class="bar-part" id="topbar-solid">
 			</div>
-			<div id="topbar-likely">
+			<div class="bar-part" id="topbar-likely">
 			</div>
-			<div id="topbar-lean">
+			<div class="bar-part" id="topbar-lean">
+			</div>
+			<div class="bar-part" id="topbar-tilt">
 			</div>
 		</div>
 		<div id="tossupbar">
 		</div>
 		<div id="bottombar">
-			<div id="bottombar-lean">
+			<div class="bar-part" id="bottombar-tilt">
 			</div>
-			<div id="bottombar-likely">
+			<div class="bar-part" id="bottombar-lean">
 			</div>
-			<div id="bottombar-solid">
+			<div class="bar-part" id="bottombar-likely">
+			</div>
+			<div class="bar-part" id="bottombar-solid">
 			</div>
 		</div>
 	</div>
